generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id               Int     @id @default(autoincrement())
  email            String  @unique
  password         String
  firstname        String
  lastname         String?
  profilePicture   String?
  bio              String?
  city             String?
  state            String?
  age              Int?
  gender           String?
  genderPreference String?
  lookingFor       String?
  profileActive    Boolean @default(true)

  activities Activity[]

  interests Interest[]

  connectToUsers   User[] @relation("ConnectedUsers")
  connectFromUsers User[] @relation("ConnectedUsers")

  notConnectToUsers   User[] @relation("NotConnectedUsers")
  notConnectFromUsers User[] @relation("NotConnectedUsers")

  sentChats     Chat[] @relation("Sender")
  receivedChats Chat[] @relation("Receiver")
}

model Interest {
  id       Int    @id @default(autoincrement())
  interest String @unique
  users    User[]
}

model Activity {
  id           Int      @id @default(autoincrement())
  name         String
  logo         String?
  summary      String
  locations    String[]
  urlResources String[]
  categories   String[]

  users User[]
}

model Chat {
  id Int @id @default(autoincrement())

  sender   User @relation("Sender", fields: [senderId], references: [id])
  senderId Int

  receiver   User @relation("Receiver", fields: [receiverId], references: [id])
  receiverId Int

  content     String
  createdAt   DateTime @default(now())
  isRead      Boolean  @default(false)
  messageType String
}
