// This is a dbml diagram for the provided Prisma schema

Table User {
  id                       int   [pk, increment] // Primary key, autoincrement
  email                    string [unique] // Unique email
  password                 string
  firstname                string
  lastname                 string
  profilePicture           string
  bio                      string
  city                     string
  state                    string
  age                      int
  gender                   string
  genderPreference         string
  lookingFor               string
  profileActive            boolean [default: true]
  interests                Interest[]
  activities               Activity[]
  receivedChats            Chat[]    
  sentChats                Chat[]    
  connectToUsers           User[]    
  connectFromUsers         User[]    
  notConnectToUsers        User[] 
  notConnectFromUsers      User[]    
}

Table Interest {
  id       int   [pk, increment] // Primary key, autoincrement
  interest string [unique] // Unique interest
  users User[]
}

Table Activity {
  id             int      [pk, increment] // Primary key, autoincrement
  name           string
  logo           string
  summary        string
  locations      string
  urlResources   string [unique] // Unique URL
  categories      string
  users User[]
}

Table Chat {
  id          int      [pk, increment] // Primary key, autoincrement
  sender      User
  senderId    int
  receiver    User   
  receiverId  int
  content     string
  createdAt   datetime  // Default current date/time
  isRead      boolean [default: false] // Default read status
  messageType string
}


Ref: "User"."interests" <> "Interest"."users"

Ref: "User"."activities" <> "Activity"."users"

Ref: "Chat"."receiver" < "User"."receivedChats"

Ref: "Chat"."sender" < "User"."sentChats"